--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,15 @@
 	<packaging>war</packaging>
 	<name>Hello World Java</name>
 	<description>Learn Java JSP and Servlet</description>
+	
+	<properties>
+		<jdk.version>1.7</jdk.version>
+		<spring.version>4.1.1.RELEASE</spring.version>
+		<jstl.version>1.2</jstl.version>
+		<junit.version>4.11</junit.version>
+		<logback.version>1.0.13</logback.version>
+		<jcl-over-slf4j.version>1.7.5</jcl-over-slf4j.version>
+	</properties>
 
 	<dependencies>
 		<!-- Unit Test -->
@@ -41,6 +50,17 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+			
+						<!-- For Tomcat -->
+			<plugin>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.2</version>
+				<configuration>
+					<path>/CounterWebApp</path>
+				</configuration>
+			</plugin>
+			
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.6</version>
