--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>CounterWebApp</finalName>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
