--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>CounterWebApp</finalName>
+		<finalName>HelloWorldJava</finalName>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
 			<plugin>
