--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.qaagility.javaee</groupId>
 	<artifactId>HelloWorldJava</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
 	<name>Hello World Java</name>
 	<description>Learn Java JSP and Servlet</description>
 	
@@ -61,6 +61,16 @@
 					<path>/CounterWebApp</path>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>${jdk.version}</source>
+					<target>${jdk.version}</target>
+				</configuration>
+			</plugin>
+
 			
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
@@ -80,7 +90,7 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
 				<version>2.7</version>
-	e			<configuration>
+				<configuration>
 					<formats>
 						<format>html</format>
 						<format>xml</format>
